# tlos-recovery

./: CMakeLists.txt  README.md  build.sh  tlosrecoverer.abi  tlosrecoverer.wasm
ricardian/: tlosrecoverer.contracts.md  tlosrecovery.clauses.md  tlosrecovery.contracts.md
src/: CMakeLists.txt  tlosrecoverer.cpp  tlosrecovery.cpp
